# wsc

./: .envrc  LICENSE  README.md  lex.scm  lexer.l  lexical-rules.scm  meson.build  parser.y  scanner.scm
.github/workflows/: tests.yaml
bootstrap/: README.md  illusions.sscm  manifest.scm
bootstrap/readable/: kernel.scm  sweeten  unsweeten
bootstrap/src/: main.sscm  tools.sscm
bootstrap/src/parse/: bindings.sscm  reading.sscm
lib/: README.md  sub-base.wat
lib/scheme/base/: README.md  meson.build  prime.wat
lib/scheme/base/src/: booleans.wat  meson.build  module.scm
lib/scheme/base/src/environments-and-evaluation/eval/: derived-expression-types.scm  normalize.scm  serialize.scm  syntax-rules.scm
lib/scheme/base/src/input-and-output/input/read/: bnf-grammar.scm  lexer.l  lexical-rules.scm  parser.scm  scanner.scm
lib/scheme/base/src/input-and-output/output/: write.scm
src/: annotated-match.scm  compile.sscm  dummy.scm  main.sscm  match.scm  meson.build  tools.sscm
src/compile/: define.sscm  function.sscm  import.sscm  library.sscm  module.sscm
src/emit/: text.sscm
src/parse/: env.sscm  macros.sscm  reading.sscm  wrap.sscm
src/srfi-crutch/: srfi-125.sscm
src/syntax/: wrap.sscm
src/tools/: logging.sscm
test/: meson.build  runner.sscm  tap.sscm
test/integration/basic/: input.scm
test/unit/: compilation.sscm  macros.sscm
