s_lang = custom_target('s-lang',
                       build_by_default: true,
                       input: unsweet.process('main.sscm',
                                              'compile.sscm',
                                              'parse/env.sscm',
                                              'parse/macros.sscm',
                                              'parse/reading.sscm',
                                              'syntax/wrap.sscm',
                                              'srfi-crutch/srfi-125.sscm',
                                              'tools.sscm',
                                              'tools/logging.sscm',
                                              preserve_path_from: meson.current_source_dir()),
                       # List all files as input but only pass the entrypoint to the command.
                       command: [guile, '--r7rs', '--no-auto-compile', '@INPUT0@'],
                       output: 's-lang.wasm')
